@@ -1,5 +1,4 @@
 [v#.#.#] ([month] [YYYY])
-  - Add Setup Wizard
   - Editor: Support fields with the same name in the Fields View
   - Tylium:
     - Import CSS manifests from addons
@@ -7,7 +6,10 @@
     - Remove height restriction from code blocks
     - Move '...' (more actions) menu closer to the content affected by the actions of the menu
     - Simplify issues table columns
-  - Setup: store gem dependencies under ./vendor/bundle/
+  - Setup:
+    - Add Setup Wizard
+    - Avoid hard-coding "../../shared/"
+    - Store gem dependencies under ./vendor/bundle/
   - Upgraded gems:
     - rails
   - Bugs fixes:
